# visual-maths

./: .gitignore  README.md  asset-manifest.json  index.html
fractal-viewer/: package-lock.json  package.json
fractal-viewer/config/: webpack.config.js
fractal-viewer/src/: App.tsx  index.css  index.tsx
maths-viewer/: package-lock.json  package.json
maths-viewer/public/: index.html
static/css/: main.42e7ff37.css  main.42e7ff37.css.map  main.87f1ebff.css  main.87f1ebff.css.map  main.b6df448c.css  main.b6df448c.css.map
static/js/: 107.21e9ccb7.chunk.js  107.21e9ccb7.chunk.js.map  107.9a1b9210.chunk.js  107.9a1b9210.chunk.js.map  107.9b1446ac.chunk.js  107.9b1446ac.chunk.js.map  442.1753430f.chunk.js  442.1753430f.chunk.js.map  442.1b92f98e.chunk.js  442.1b92f98e.chunk.js.map  442.2472bc8d.chunk.js  442.2472bc8d.chunk.js.map  442.289d3d2d.chunk.js  442.289d3d2d.chunk.js.map  442.70ff29f3.chunk.js  442.70ff29f3.chunk.js.map  619.14a824e9.chunk.js  619.14a824e9.chunk.js.map  619.3647eba0.chunk.js  619.3647eba0.chunk.js.map  619.9a3c536d.chunk.js  619.9a3c536d.chunk.js.map  main.1ff2993b.js  main.1ff2993b.js.map  main.2d2bc194.js  main.2d2bc194.js.map  main.483a07c7.js  main.483a07c7.js.map  main.5a01396b.js  main.5a01396b.js.map  main.668004e5.js  main.668004e5.js.map  main.a8067cdf.js  main.a8067cdf.js.map  main.b0c28d9c.js  main.b0c28d9c.js.map
visual-maths/: package.json  tailwind.config.js
visual-maths/public/: index.html
wasm/: Cargo.toml
wasm-build/: wasm.d.ts  wasm_bg.js  wasm_bg.wasm.d.ts
wasm/src/: fractals.rs  game_of_life.rs  lib.rs  utils.rs
(+17 files in other folders)
