[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
wasm-bindgen = "0.2.63"
itertools-num = "0.1.3"
nodejs-helper = "0.0.3"
num = "0.4.0"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }